--- a/xwang_cv_10pt.tex
+++ b/xwang_cv_10pt.tex
@@ -168,38 +168,41 @@
 \vspace*{-.5em}
 \begin{longtable}{r|p{\textwrap}}
 
+    \textsc{Jan. 2021}   &   \textbf{Contributed Talk}, @ \href{https://aas.org/meetings/aas237}{AAS 237}, virtual    \\
+    \multicolumn{2}{c}{} \\
+
     \textsc{Dec. 2020}   &   \textbf{Invited Seminar}, @ Department of Physics and Astronomy, University of Missouri \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Dec. 2019}   &   \textbf{Invited talk}, @ Purple Mountain Observatory, Nanjing \\
+    \textsc{Dec. 2019}   &   \textbf{Invited Talk}, @ Purple Mountain Observatory, Nanjing \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Dec. 2019}   &   \textbf{Invited talk}, @ 2019 Nanjing University Youth Forum, Nanjing \\
+    \textsc{Dec. 2019}   &   \textbf{Invited Talk}, @ 2019 Nanjing University Youth Forum, Nanjing \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Dec. 2019}   &   \textbf{Invited talk}, @ Shanghai Astronomical Observatory \\
+    \textsc{Dec. 2019}   &   \textbf{Invited Talk}, @ Shanghai Astronomical Observatory \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Dec. 2019}   &   \textbf{Invited talk}, @ Shanghai Jiao Tong University, Shanghai \\
+    \textsc{Dec. 2019}   &   \textbf{Invited Talk}, @ Shanghai Jiao Tong University, Shanghai \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Aug. 2019}   &   \textbf{Lunch talk}, @ \href{http://kiaa.pku.edu.cn/info/1025/5076.htm}{The Kavli Institute for 
+    \textsc{Aug. 2019}   &   \textbf{Lunch Talk}, @ \href{http://kiaa.pku.edu.cn/info/1025/5076.htm}{The Kavli Institute for 
     Astronomy and Astrophysics at Peking University} \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Aug. 2019}   &   \textbf{Invited talk}, @ National Astronomical Observatories of China, Beijing \\
+    \textsc{Aug. 2019}   &   \textbf{Invited Talk}, @ National Astronomical Observatories of China, Beijing \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Aug. 2019}   &   \textbf{Invited talk}, @ Key Laboratory of Space Utilization, CAS \\
+    \textsc{Aug. 2019}   &   \textbf{Invited Talk}, @ Key Laboratory of Space Utilization, CAS \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jun. 2019}   &   \textbf{Invited talk}, @ \href{https://sites.google.com/view/clearhst19/home}{CLEAR collaboration meeting}, STScI \\
+    \textsc{Jun. 2019}   &   \textbf{Invited Talk}, @ \href{https://sites.google.com/view/clearhst19/home}{CLEAR collaboration meeting}, STScI \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Feb. 2019}   &   \textbf{Contributed talk}, @ \href{https://conferences.pa.ucla.edu/early-universe-2019/agenda.html}{Extremely Big Eyes on the Early Universe}, UCLA  \\
+    \textsc{Feb. 2019}   &   \textbf{Contributed Talk}, @ \href{https://conferences.pa.ucla.edu/early-universe-2019/agenda.html}{Extremely Big Eyes on the Early Universe}, UCLA  \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jan. 2019}   &   \textbf{Dissertation Talk}, @ \href{https://aas.org/meetings/aas233}{AAS 223}, Seattle    \\
+    \textsc{Jan. 2019}   &   \textbf{Dissertation Talk}, @ \href{https://aas.org/meetings/aas233}{AAS 233}, Seattle    \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Dec. 2018}   &   \href{http://www.astro.columbia.edu/event?eid=584}{\textbf{Astronomy Seminar}} @ Columbia \\
@@ -217,37 +220,37 @@
     \textsc{Nov. 2018}   &   \href{https://docs.google.com/document/d/1fhFuTsbHO7ATeQEiBvRQ4fj_BDR7pM4HPMjxeMyEyh4/edit}{\textbf{IMPS Seminar}} @ UC Santa Cruz \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Nov. 2018}   &   \href{https://obs.carnegiescience.edu/content/tbd-108}{\textbf{Lunch talk}} @ Carnegie Observatories, Pasadena, CA \\
+    \textsc{Nov. 2018}   &   \href{https://obs.carnegiescience.edu/content/tbd-108}{\textbf{Lunch Talk}} @ Carnegie Observatories, Pasadena, CA \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Oct. 2018}   &   \textbf{Astronomy Tea Talk} @ Caltech, Pasadena, CA \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Aug. 2018}   &   \textbf{Contributed talk}, @ Focus Meeting 7 at the XXXth IAU General Assembly, Vienna, Austria \\
+    \textsc{Aug. 2018}   &   \textbf{Contributed Talk}, @ Focus Meeting 7 at the XXXth IAU General Assembly, Vienna, Austria \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jul. 2018}   &   \textbf{Invited talk}, @ University of Science and Technology of China, Hefei \\
+    \textsc{Jul. 2018}   &   \textbf{Invited Talk}, @ University of Science and Technology of China, Hefei \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jun. 2018}   &   \textbf{Contributed talk with conference fellowship}, @ KIAA Forum on Gas in Galaxies, Beijing \\
+    \textsc{Jun. 2018}   &   \textbf{Contributed Talk with Conference Fellowship}, @ KIAA Forum on Gas in Galaxies, Beijing \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{May 2018}   &   \textbf{Invited talk}, @ 2018 Nanjing University Youth Forum, Nanjing \\
+    \textsc{May 2018}   &   \textbf{Invited Talk}, @ 2018 Nanjing University Youth Forum, Nanjing \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Feb. 2018}   &   \href{https://www.ipac.caltech.edu/event/358}{\textbf{Colloquium talk}}, @ IPAC, Caltech, Pasadena, CA \\
+    \textsc{Feb. 2018}   &   \href{https://www.ipac.caltech.edu/event/358}{\textbf{Colloquium Talk}}, @ IPAC, Caltech, Pasadena, CA \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jan. 2018}   &   \textbf{Lunch talk}, @ Carnegie Observatories, Pasadena, CA \\
+    \textsc{Jan. 2018}   &   \textbf{Lunch Talk}, @ Carnegie Observatories, Pasadena, CA \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Sept. 2017}   &   \textbf{Invited talk}, @ Tsinghua University, Beijing \\
+    \textsc{Sept. 2017}   &   \textbf{Invited Talk}, @ Tsinghua University, Beijing \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Sept. 2017}   &   \textbf{Invited talk}, @ Nanjing University, Nanjing \\
+    \textsc{Sept. 2017}   &   \textbf{Invited Talk}, @ Nanjing University, Nanjing \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Sept. 2017}   &   \textbf{Invited talk}, @ Shanghai Jiao Tong University, Shanghai \\
+    \textsc{Sept. 2017}   &   \textbf{Invited Talk}, @ Shanghai Jiao Tong University, Shanghai \\
     \multicolumn{2}{c}{} \\
 
 %    \textsc{Aug. 2017}   &   \textbf{Contributed talk}, @
@@ -300,14 +303,15 @@
 
 \begin{list}{\labelitemi}{\leftmargin=1.7em}
     \vspace*{1ex}
-    \item[1] HST-GO-16276, \textbf{PI Wang}, \emph{45 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=16276&mission=hst}{WFC3 Spectroscopy of the Most Massive Galaxy Protoclusters at Cosmic Noon}
-    \item[2] JWST-ERS-01324, PI Treu: Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day
-    \item[3] HST-GO-15647, PI Teplitz: Ultraviolet Imaging of the Cosmic Assembly Near-infrared Deep Extragalactic Legacy Survey Fields (UVCANDELS)
-    \item[4] HST-GO-13459, PI Treu: The Grism Lens-Amplified Survey from Space (GLASS)
-    \item[5] HST-DDT-14922, PI Kelly: Probing the Nature of Dark Matter with Individual Stars Highly Magnified by a Galaxy Cluster
-    \item[6] Keck 2017A\_U037, 2017B\_U058, 2018A\_U158, 2018B\_U061, 2019A\_U130, 2019B\_U057, PI Jones: Dissecting Galaxy Formation and Testing Feedback Models on 100 pc Scales: An OSIRIS Survey of Lensed Galaxies at $z\simeq2$
+    \item[9] Keck 2022A\_U016, PI Malkan, \emph{2 Full Nights}: The Most Massive Galaxy Protoclusters at Cosmic Noon---Impact on Galaxy Evolution
+    \item[8] HST-GO-16276, \textbf{PI Wang}, \emph{45 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=16276&mission=hst}{WFC3 Spectroscopy of the Most Massive Galaxy Protoclusters at Cosmic Noon}
     \item[7] JWST-GO-01571, PI Malkan: PASSAGE--Parallel Application of Slitless Spectroscopy to Analyze Galaxy Evolution
-    \item[8] JWST-GO-02136, PI Jones: The emergence of the modern Hubble sequence revealed by JWST slit-stepping
+    \item[6] JWST-GO-02136, PI Jones: The emergence of the modern Hubble sequence revealed by JWST slit-stepping
+    \item[5] JWST-ERS-01324, PI Treu: Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day
+    \item[4] Keck 2017A\_U037, 2017B\_U058, 2018A\_U158, 2018B\_U061, 2019A\_U130, 2019B\_U057, PI Jones: Dissecting Galaxy Formation and Testing Feedback Models on 100 pc Scales: An OSIRIS Survey of Lensed Galaxies at $z\simeq2$
+    \item[3] HST-GO-15647, PI Teplitz: Ultraviolet Imaging of the Cosmic Assembly Near-infrared Deep Extragalactic Legacy Survey Fields (UVCANDELS)
+    \item[2] HST-DDT-14922, PI Kelly: Probing the Nature of Dark Matter with Individual Stars Highly Magnified by a Galaxy Cluster
+    \item[1] HST-GO-13459, PI Treu: The Grism Lens-Amplified Survey from Space (GLASS)
 \end{list}
 
 
@@ -372,6 +376,7 @@
 
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 
+12 &  Li, Z., \textbf{Wang, X.} et al. The Metallicity Gradients of Galaxies at Cosmic Noon in Overdense Environments. In prep. \\
 11 &  \textbf{Wang, X.} et al. Measurements of Escaping Lyman Continuum in Galaxy Stacks and Extreme Emission Line Galaxies from UVCANDELS. In prep. \\
 10 &  \textbf{Wang, X.} et al. The mass-metallicity relation at cosmic noon in overdense environments: first results from the 
     MAMMOTH-Grism HST slitless spectroscopic survey. 2021, \textit{Astrophys. J.} in press 
