--- a/xwang_publist.tex
+++ b/xwang_publist.tex
@@ -8,7 +8,7 @@
 
 \usepackage{geometry}
 \newcommand{\marg}{1in}
-\geometry{letterpaper,tmargin=\marg,bmargin=\marg,lmargin=1in,rmargin=1in,headheight=0in,headsep=.2in,footskip=.4in}
+\geometry{letterpaper,tmargin=\marg,bmargin=\marg,lmargin=1in,rmargin=1in,headheight=0in,headsep=.35in, footskip=.45in}
 
 \usepackage{marvosym}
 \usepackage{fontspec} 					    %for loading fonts
@@ -54,7 +54,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
-\vspace*{-.1in}
+\vspace*{-.3in}
 
 \begingroup
 \renewcommand\arraystretch{1.2}
@@ -63,6 +63,7 @@
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 \\[\narrow]
 
+12 &  Li, Z., \textbf{Wang, X.} et al. The Metallicity Gradients of Galaxies at Cosmic Noon in Overdense Environments. In prep. \\
 11 &  \textbf{Wang, X.} et al. Measurements of Escaping Lyman Continuum in Galaxy Stacks and Extreme Emission Line Galaxies from UVCANDELS. In prep. \\
 10 &  \textbf{Wang, X.} et al. The mass-metallicity relation at cosmic noon in overdense environments: first results from the 
     MAMMOTH-Grism HST slitless spectroscopic survey. 2021, \textit{Astrophys. J.} in press 
@@ -70,7 +71,7 @@
 9 &  \textbf{Wang, X.} et al. A Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless 
     Spectroscopy. 2020, \textit{Astrophys. J.}, 900, 183 (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) [11 citations] \\
 8 &  \textbf{Wang, X.} et al. Discovery of Strongly Inverted Metallicity Gradients in Dwarf Galaxies at $z$$\sim$2. 2019, \textit{Astrophys. J.}, 882, 
-    94 (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800}) [24 citations]  \\
+    94 (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800}) [25 citations]  \\
 7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic 
     noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558}
     {arXiv:1610.07558}) [40 citations]    \\
@@ -95,12 +96,12 @@
 \\[\narrow]
 
 22  &   Prichard, L. J., ..., \textbf{Wang, X.} et al. Lyman Continuum Galaxy Candidates in COSMOS. 2021 \textit{Astrophys. J.} in 
-    press (\href{https://arxiv.org/abs/2110.06945}{arXiv:2110.06945}) [1 citations]  \\
+    press (\href{https://arxiv.org/abs/2110.06945}{arXiv:2110.06945}) [3 citations]  \\
 21  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XIII. G800L optical spectra from the 
     parallel fields. 2020, \textit{MNRAS}, 493, 952 (\href{https://arxiv.org/abs/1906.00008}{arXiv:1906.00008}) [4 citations]  \\
 20  &   Bradac, M., ..., \textbf{Wang, X.} Hubble Frontier Field photometric catalogues of Abell 370 and RXC J2248.7-4431: 
     multiwavelength photometry, photometric redshifts, and stellar properties. \textit{MNRAS}, 489, 99 
-    (\href{https://arxiv.org/abs/1906.01725}{arXiv:1906.01725}) [9 citations]  \\
+    (\href{https://arxiv.org/abs/1906.01725}{arXiv:1906.01725}) [10 citations]  \\
 19  &   Morishita, T., ..., \textbf{Wang, X.}. Massive Dead Galaxies at z$\sim$2 with HST Grism Spectroscopy. I. Star Formation Histories and 
     Metallicity Enrichment. 2019, \textit{Astrophys. J.}, 877, 141 (\href{https://arxiv.org/abs/1812.06980}{arXiv:1812.06980}) [28 citations] \\
 18  &   Hirtenstein, J., Jones, T., \textbf{Wang, X.} et al. The OSIRIS Lens-Amplified Survey (OLAS) I: Dynamical Effects of Stellar Feedback in Low 
@@ -114,7 +115,7 @@
     \textit{Astrophys. J. Letters}, 856L, 4 (\href{https://arxiv.org/abs/1803.01852}{arXiv:1803.01852}) [12 citations]  \\
 14  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XII. Spatially Resolved Galaxy Star 
     Formation Histories and True Evolutionary Paths at z$>$1. 2018, \textit{Astron. J.}, 156, 29 (\href{https://arxiv.org/abs/1710.00843}{arXiv:
-    1710.00843}) [9 citations]  \\
+    1710.00843}) [10 citations]  \\
 13  &   Kelly, P. L., ..., \textbf{Wang, X.} et al. Extreme magnification of an individual star at redshift 1.5 by a galaxy-cluster lens. 2018, 
     \textit{Nature Astronomy}, 2, 334 (\href{https://arxiv.org/abs/1706.10279}{arXiv:1706.10279}) [75 citations]  \\
 12  &   Williams, P. R., ..., \textbf{Wang, X.} Discovery of three strongly lensed quasars in the Sloan Digital Sky Survey. 2018, \textit{MNRAS}, 477L, 
@@ -123,9 +124,9 @@
     Ly$\alpha$ Emitter Behind RXCJ2248.7-4431. 2017, \textit{Astrophys. J.}, 839, 17 
     (\href{https://arxiv.org/abs/1702.04731}{arXiv:1702.04731}) [39 citations] \\
 10  &   Morishita, T., Abramson, L. E., Treu, T., Schmidt, K. B., Vulcani, B., \textbf{Wang, X.} Characterizing Intracluster Light in the Hubble 
-    Frontier Fields. 2017, \textit{Astrophys. J.}, 846, 139 (\href{https://arxiv.org/abs/1610.08503}{arXiv:1610.08503}) [53 citations] \\
+    Frontier Fields. 2017, \textit{Astrophys. J.}, 846, 139 (\href{https://arxiv.org/abs/1610.08503}{arXiv:1610.08503}) [54 citations] \\
 9   &   Vulcani, B., ..., \textbf{Wang, X.} The Grism lens-amplified survey from space (GLASS). VIII. The influence of the cluster properties on 
-    Halpha emitter galaxies at $0.3<z<0.7$. 2017, \textit{Astrophys. J.}, 837, 126 (\href{https://arxiv.org/abs/1610.04615}{arXiv:1610.04615}) [13 citations]  \\
+    Halpha emitter galaxies at $0.3<z<0.7$. 2017, \textit{Astrophys. J.}, 837, 126 (\href{https://arxiv.org/abs/1610.04615}{arXiv:1610.04615}) [15 citations]  \\
 8   &   Morishita, T., ..., \textbf{Wang, X.}, et al. The Grism Lens-Amplified Survey from Space (GLASS). IX. The dual origin of low-mass cluster 
     galaxies as revealed by new structural analyses. 2017, \textit{Astrophys. J.}, 835, 254 (\href{https://arxiv.org/abs/1607.00384}{arXiv:1607.00384}) 
     [35 citations]  \\
@@ -135,15 +136,16 @@
     MACSJ0416.1-2403 using Frontier Field imaging and GLASS spectroscopy. 2016, \textit{Astrophys. J.}, 831, 182 (\href{https://arxiv.org/abs/1603.00505}
     {arXiv:1603.00505}) [34 citations]   \\
 5   &   Schmidt, K. B., ..., \textbf{Wang, X.} The Grism Lens-Amplified Survey from Space (GLASS). III. A census of Ly$\alpha$ Emission at $z\gtrsim$7 
-    from HST Spectroscopy. 2016, \textit{Astrophys. J.}, 818, 38 (\href{https://arxiv.org/abs/1511.04205}{arXiv:1511.04205}) [54 citations] \\
+    from HST Spectroscopy. 2016, \textit{Astrophys. J.}, 818, 38 (\href{https://arxiv.org/abs/1511.04205}{arXiv:1511.04205}) [56 citations] \\
 4   &   Rodney, S., ..., \textbf{Wang, X.}, et al. Illuminating a Dark Lens : A Type Ia Supernova Magnified by the Frontier Fields Galaxy Cluster 
     Abell 2744. 2015, \textit{Astrophys. J.}, 811, 70 (\href{https://arxiv.org/abs/1505.06211}{arXiv:1505.06211}) [59 citations]  \\
 3   &   Treu, T., Schmidt, K. B., Brammer, G. B., Vulcani, B., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). I. Survey 
     Overview and First Data Release. 2015, \textit{Astrophys. J.}, 812, 114 
-    (\href{https://arxiv.org/abs/1509.00475}{arXiv:1509.00475}) [145 citations]  \\
+    (\href{https://arxiv.org/abs/1509.00475}{arXiv:1509.00475}) [150 citations]  \\
 2   &   Schmidt, K. B., Treu, T., Brammer, G. B., Bradac, M., \textbf{Wang, X.} et al. Through the Looking GLASS: HST Spectroscopy of Faint Galaxies 
     Lensed by the Frontier Fields Cluster MACSJ0717.5+3745. 2014, \textit{Astrophys. J. Letters}, 782L, 36 (\href{http://arxiv.org/abs/1401.0532}{arXiv:1401.0532}) [102 citations] \\
 1   &   Meng, X.-L., Zhang, T.-J., Zhan, H., \& \textbf{Wang, X.} Morphology of Galaxy Clusters: A Cosmological Model-Independent Test of the Cosmic 
+    Distance-Duality Relation. 2012, \textit{Astrophys. J.}, 745, 98 (\href{http://arxiv.org/abs/1104.2833}{arXiv:1104.2833}) [62 citations]
 
 \end{longtable}
 \endgroup
