--- a/xwang_cv_10pt.tex
+++ b/xwang_cv_10pt.tex
@@ -379,32 +379,31 @@
 
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 
-12 &  Li, Z., \textbf{Wang, X.} et al. The Metallicity Gradients of Galaxies at Cosmic Noon in Overdense Environments. In prep. \\
-11 &  \textbf{Wang, X.} et al. Measurements of Escaping Lyman Continuum in Galaxy Stacks and Extreme Emission Line Galaxies from UVCANDELS. In prep. \\
-10 &  \textbf{Wang, X.} et al. The mass-metallicity relation at cosmic noon in overdense environments: first results from the 
-    MAMMOTH-Grism HST slitless spectroscopic survey. 2021, \textit{Astrophys. J.} in press 
-    (\href{https://arxiv.org/abs/2108.06373}{arXiv:2108.06373})  \\
-9 &  \textbf{Wang, X.} et al. A Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless 
-    Spectroscopy. 2020, \textit{Astrophys. J.}, 900, 183 (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) [11 citations] \\
-8 &  \textbf{Wang, X.} et al. Discovery of Strongly Inverted Metallicity Gradients in Dwarf Galaxies at $z$$\sim$2. 2019, \textit{Astrophys. J.}, 882, 
-    94 (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800}) [25 citations]  \\
-7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic 
-    noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558}
-    {arXiv:1610.07558}) [40 citations]    \\
-6 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. Mass reconstruction of the lensing cluster Abell 2744 from 
-    frontier field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405}) 
-    [43 citations] \\
-5 &  Jones, T., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) II. Gas-Phase Metallicity and Radial Gradients in an 
-    Interacting System At z$\sim$2. 2015, \textit{Astron. J.}, 149, 107 (\href{http://arxiv.org/abs/1410.0967}{arXiv:1410.0967}) 
-    [50 citations] \\
-4 &  \textbf{Wang, X.}, Meng, X.-L., \& Huang, Y. F., Testing X-ray Measurements of Galaxy Cluster Gas Mass Fraction Using the Cosmic Distance-Duality 
-    Relation and Type Ia Supernovae. 2013, RAA, 13, 1013 (\href{http://arxiv.org/abs/1305.2077}{arXiv:1305.2077}) [3 citations] \\
-3 &  \textbf{Wang, X.}, Meng, X.-L. et al. Observational Constraints on Cosmic Neutrinos and Dark Energy Revisited. 2012, \textit{J. Cosmol. 
-    Astropart. Phys.}, 11, 018 (\href{http://arxiv.org/abs/1210.2136}{arXiv:1210.2136}) [25 citations] \\
-2 &  \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. Constraint on the Counter-jet Emission in GRB Afterglows from GRB 980703. 2010, \textit{Sci. 
-    China-Phys. Mech. Astron.}, 53 (Suppl.1), 259 [3 citations]    \\
-1 &  \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. On the Afterglow from the Receding Jet of Gamma-Ray Bursts. 2009, \textit{Astron. Astrophys.}, 
-    505, 1213 (\href{http://arxiv.org/abs/0903.3119}{arXiv:0903.3119}) [8 citations]   \\
+13 &  \textbf{Wang, X.} et al. The Lyman Continuum Escape Fraction of Star-forming Galaxies at $z\gtrsim2.4$ from UVCANDELS. In prep.  \\
+
+12 &  \textbf{Wang, X.} et al. Early results from GLASS-JWST. IV. Spatially resolved metallicity in a low-mass $z\sim3$ galaxy with NIRISS. 2022, \textit{Astrophys. J. Letters}, in press (\href{https://arxiv.org/abs/2207.13113}{arXiv:2207.13113}) [2 citations] \\
+
+11 &  Li, Z., \textbf{Wang, X.} et al. First Census of Gas-phase Metallicity Gradients of Star-forming Galaxies in OverdenseEnvironments at Cosmic Noon. 2022, \textit{Astrophys. J. Letters}, 929, L8 (\href{https://arxiv.org/abs/2204.03008}{arXiv:2204.03008}) [3 citations] \\
+
+10 &  \textbf{Wang, X.} et al. The mass-metallicity relation at cosmic noon in overdense environments: first results from the MAMMOTH-Grism HST slitless spectroscopic survey. 2022, \textit{Astrophys. J.}, 926, 70 (\href{https://arxiv.org/abs/2108.06373}{arXiv:2108.06373}) [5 citations] \\
+
+9 &  \textbf{Wang, X.} et al. A Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless Spectroscopy. 2020, \textit{Astrophys. J.}, 900, 183 (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) [19 citations] \\
+
+8 &  \textbf{Wang, X.} et al. Discovery of Strongly Inverted Metallicity Gradients in Dwarf Galaxies at $z$$\sim$2. 2019, \textit{Astrophys. J.}, 882, 94 (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800}) [31 citations]  \\
+
+7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558} {arXiv:1610.07558}) [46 citations]    \\
+
+6 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. Mass reconstruction of the lensing cluster Abell 2744 from frontier field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405}) [48 citations] \\
+
+5 &  Jones, T., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) II. Gas-Phase Metallicity and Radial Gradients in an Interacting System At z$\sim$2. 2015, \textit{Astron. J.}, 149, 107 (\href{http://arxiv.org/abs/1410.0967}{arXiv:1410.0967}) [54 citations] \\
+
+4 &  \textbf{Wang, X.}, Meng, X.-L., \& Huang, Y. F., Testing X-ray Measurements of Galaxy Cluster Gas Mass Fraction Using the Cosmic Distance-Duality Relation and Type Ia Supernovae. 2013, RAA, 13, 1013 (\href{http://arxiv.org/abs/1305.2077}{arXiv:1305.2077}) [3 citations] \\
+
+3 &  \textbf{Wang, X.}, Meng, X.-L. et al. Observational Constraints on Cosmic Neutrinos and Dark Energy Revisited. 2012, \textit{J. Cosmol.  Astropart. Phys.}, 11, 018 (\href{http://arxiv.org/abs/1210.2136}{arXiv:1210.2136}) [27 citations] \\
+
+2 &  \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. Constraint on the Counter-jet Emission in GRB Afterglows from GRB 980703. 2010, \textit{Sci.  China-Phys. Mech. Astron.}, 53 (Suppl.1), 259 [3 citations]    \\
+
+1 &  \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. On the Afterglow from the Receding Jet of Gamma-Ray Bursts. 2009, \textit{Astron. Astrophys.}, 505, 1213 (\href{http://arxiv.org/abs/0903.3119}{arXiv:0903.3119}) [8 citations]   \\
 
 \\[\narrow]
 \multicolumn{2}{c}{\textbf{Contributing Author Papers in Refereed Academic Journals}}      \\
@@ -426,7 +425,7 @@
 16  &   Finney, E., ..., \textbf{Wang, X.} et al. Mass Modeling of Frontier Fields Cluster MACS J1149.5+2223 Using Strong and Weak Lensing. 2018, 
     \textit{Astrophys. J.}, 859, 1 (\href{https://arxiv.org/abs/1806.00698}{arXiv:1806.00698}) [9 citations] \\
 15  &   Morishita, T., Abramson, L. E., Treu, T., \textbf{Wang, X.} et al.  Metal Deficiency in Two Massive Dead Galaxies at z$\sim$2. 2018, 
-    \textit{Astrophys. J. Letters}, 856L, 4 (\href{https://arxiv.org/abs/1803.01852}{arXiv:1803.01852}) [12 citations]  \\
+    \textit{Astrophys. J. Letters}, 856, L4 (\href{https://arxiv.org/abs/1803.01852}{arXiv:1803.01852}) [12 citations]  \\
 14  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XII. Spatially Resolved Galaxy Star 
     Formation Histories and True Evolutionary Paths at z$>$1. 2018, \textit{Astron. J.}, 156, 29 (\href{https://arxiv.org/abs/1710.00843}{arXiv:
     1710.00843}) [10 citations]  \\
