--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -307,16 +307,17 @@
 
 \begin{list}{\labelitemi}{\leftmargin=1.7em}
     \vspace*{1ex}
-    \item[1] HST-GO-16276, \textbf{PI Wang}, \emph{45 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=16276&mission=hst}{WFC3 Spectroscopy of the Most Massive Galaxy Protoclusters at Cosmic Noon}
-    \item[2] JWST-ERS-01324, PI Treu: \href{https://www.stsci.edu/jwst/observing-programs/approved-ers-programs/program-1324}{Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day}
-    \item[3] HST-GO-15647, PI Teplitz: Ultraviolet Imaging of the Cosmic Assembly Near-infrared Deep Extragalactic Legacy Survey Fields (UVCANDELS)
-    \item[4] HST-GO-13459, PI Treu: The Grism Lens-Amplified Survey from Space (GLASS)
-%    \item[5] HST-DDT-14922, PI Kelly: Probing the Nature of Dark Matter with Individual Stars Highly Magnified by a Galaxy Cluster
-%    \item[4] HST-14280, PI Bradac: Breaking Cosmic Dawn: Observing the z>7 Universe Through Cosmic Telescopes
-%    \item[5] VLT-0101.B-0418(A), PI Sanchez-Janssen: Chemodynamics of lensed dwarf galaxies at $1\lesssim z\lesssim 2$
-    \item[5] Keck, PI Jones: Dissecting Galaxy Formation and Testing Feedback Models on 100 pc Scales: An OSIRIS Survey of Lensed Galaxies at $z\simeq2$
-    \item[6] JWST-GO-01571, PI Malkan: PASSAGE--Parallel Application of Slitless Spectroscopy to Analyze Galaxy Evolution
-    \item[7] JWST-GO-02136, PI Jones: The emergence of the modern Hubble sequence revealed by JWST slit-stepping
+    \item[11] HST-GO-17159, \textbf{PI Wang}, \emph{38 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=17159&mission=hst}{Escaping Lyman Continuum from the Overdensities of Extreme Emission Line Galaxies at z$\sim$2.2}
+    \item[10] JWST-GO-01571, PI Malkan: PASSAGE--Parallel Application of Slitless Spectroscopy to Analyze Galaxy Evolution
+    \item[9] JWST-GO-02136, PI Jones: The emergence of the modern Hubble sequence revealed by JWST slit-stepping
+    \item[8] HST-GO-16276, \textbf{PI Wang}, \emph{45 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=16276&mission=hst}{WFC3 Spectroscopy of the Most Massive Galaxy Protoclusters at Cosmic Noon}
+    \item[7] JWST-ERS-01324, PI Treu: \href{https://www.stsci.edu/jwst/observing-programs/approved-ers-programs/program-1324}{Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day}
+    \item[6] HST-GO-15647, PI Teplitz: Ultraviolet Imaging of the Cosmic Assembly Near-infrared Deep Extragalactic Legacy Survey Fields (UVCANDELS)
+    \item[5] VLT-0101.B-0418(A), PI Sanchez-Janssen: Chemodynamics of lensed dwarf galaxies at $1\lesssim z\lesssim 2$
+    \item[4] Keck, PI Jones: Dissecting Galaxy Formation and Testing Feedback Models on 100 pc Scales: An OSIRIS Survey of Lensed Galaxies at $z\simeq2$
+    \item[3] HST-DDT-14922, PI Kelly: Probing the Nature of Dark Matter with Individual Stars Highly Magnified by a Galaxy Cluster
+    \item[2] HST-14280, PI Bradac: Breaking Cosmic Dawn: Observing the z>7 Universe Through Cosmic Telescopes
+    \item[1] HST-GO-13459, PI Treu: The Grism Lens-Amplified Survey from Space (GLASS)
 \end{list}
 
 
@@ -326,7 +327,7 @@
 \begin{tabular}{l}
     \textbullet~Keck OSIRIS, 16 nights \\
     \textbullet~Keck DEIMOS, 3 nights \\
-    \textbullet~Keck MOSFIRE, 1 night \\
+    \textbullet~Keck MOSFIRE, 3 nights \\
     \textbullet~Keck ESI, 1 night \\
     \textbullet~Steward Observatory Bok telescope, 6 nights \\
     \textbullet~Palomar Observatory P200 telescope, 2 nights \\
