--- a/xwang_cv_10pt.tex
+++ b/xwang_cv_10pt.tex
@@ -306,14 +306,17 @@
 
 \begin{list}{\labelitemi}{\leftmargin=1.7em}
     \vspace*{1ex}
-    \item[9] Keck 2022A\_U016, PI Malkan, \emph{2 Full Nights}: The Most Massive Galaxy Protoclusters at Cosmic Noon---Impact on Galaxy Evolution
+    \item[12] HST-GO-17159, \textbf{PI Wang}, \emph{38 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=17159&mission=hst}{Escaping Lyman Continuum from the Overdensities of Extreme Emission Line Galaxies at z$\sim$2.2}
+    \item[11] Keck 2022A\_U016, PI Malkan, \emph{2 Full Nights}: The Most Massive Galaxy Protoclusters at Cosmic Noon---Impact on Galaxy Evolution
+    \item[10] JWST-GO-01571, PI Malkan: PASSAGE--Parallel Application of Slitless Spectroscopy to Analyze Galaxy Evolution
+    \item[9] JWST-GO-02136, PI Jones: The emergence of the modern Hubble sequence revealed by JWST slit-stepping
     \item[8] HST-GO-16276, \textbf{PI Wang}, \emph{45 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=16276&mission=hst}{WFC3 Spectroscopy of the Most Massive Galaxy Protoclusters at Cosmic Noon}
-    \item[7] JWST-GO-01571, PI Malkan: PASSAGE--Parallel Application of Slitless Spectroscopy to Analyze Galaxy Evolution
-    \item[6] JWST-GO-02136, PI Jones: The emergence of the modern Hubble sequence revealed by JWST slit-stepping
-    \item[5] JWST-ERS-01324, PI Treu: Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day
+    \item[7] JWST-ERS-01324, PI Treu: Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day
+    \item[6] HST-GO-15647, PI Teplitz: Ultraviolet Imaging of the Cosmic Assembly Near-infrared Deep Extragalactic Legacy Survey Fields (UVCANDELS)
+    \item[5] VLT-0101.B-0418(A), PI Sanchez-Janssen: Chemodynamics of lensed dwarf galaxies at $1\lesssim z\lesssim 2$
     \item[4] Keck 2017A\_U037, 2017B\_U058, 2018A\_U158, 2018B\_U061, 2019A\_U130, 2019B\_U057, PI Jones: Dissecting Galaxy Formation and Testing Feedback Models on 100 pc Scales: An OSIRIS Survey of Lensed Galaxies at $z\simeq2$
-    \item[3] HST-GO-15647, PI Teplitz: Ultraviolet Imaging of the Cosmic Assembly Near-infrared Deep Extragalactic Legacy Survey Fields (UVCANDELS)
-    \item[2] HST-DDT-14922, PI Kelly: Probing the Nature of Dark Matter with Individual Stars Highly Magnified by a Galaxy Cluster
+    \item[3] HST-DDT-14922, PI Kelly: Probing the Nature of Dark Matter with Individual Stars Highly Magnified by a Galaxy Cluster
+    \item[2] HST-AR-14280, PI Bradac: Breaking Cosmic Dawn: Observing the z>7 Universe Through Cosmic Telescopes
     \item[1] HST-GO-13459, PI Treu: The Grism Lens-Amplified Survey from Space (GLASS)
 \end{list}
 
