--- a/xwang_cv_10pt.tex
+++ b/xwang_cv_10pt.tex
@@ -86,11 +86,10 @@
 \section{Personal Information}
 \vspace*{1ex}
 \begin{tabular}{rl}
-%    \textsc{Date and Place of Birth:}       & September 1$^{\rm st}$, 1988  |  Tianjin, China \\
-    \textsc{Current Status:}  & Postdoctoral Research Associate at Caltech/IPAC     \\
-    \textsc{Email, Phone, Web:}  & \href{mailto:wangxin@ipac.caltech.edu}{wangxin@ipac.caltech.edu}     |  +1-805-574-0025  |  \url{http://www.astro.ucla.edu/~xwang}\\
-    \textsc{Mailing Address:} & Infrared Processing and Analysis Center, Mail Code 314-6, Caltech \\
-                              & 1200 East California Boulevard, Pasadena, CA 91125, USA
+    \textsc{Current Status:}  & Assistant Professor at University of Chinese Academy of Sciences    \\
+    \textsc{Email, Phone, Web:}  & \href{mailto:xwang@ucas.ac.cn}{xwang@ucas.ac.cn}  |  +86-13121987901  |  \url{http://www.astro.ucla.edu/~xwang}\\
+    \textsc{Mailing Address:} & 20A Datun Road, Room B447, National Astronomical Observatories  \\
+                              & Chaoyang District, Beijing 100101, China    \\
 \end{tabular}
 
 
@@ -99,8 +98,12 @@
 \vspace*{1ex}
 \begin{tabular}{r|p{5.7in}}
     %--------------------------------------------------------
+    \textsc{Sept. 2022}--     &   School of Astronomy and Space Science, University of Chinese Academy of Sciences  \\
+    \textsc{Present}          &   \hfill\textbf{Assistant Professor}    \\
+    \multicolumn{2}{c}{} \\[\narrow]
+    %--------------------------------------------------------
     \textsc{Aug. 2019}--      &   Infrared Processing and Analysis Center, Caltech \\
-    \textsc{Present}          &   \hfill\textbf{Postdoctoral Research Associate}    \\
+    \textsc{Aug. 2022}        &   \hfill\textbf{Postdoctoral Research Associate}    \\
     \multicolumn{2}{c}{} \\[\narrow]
     %--------------------------------------------------------
     \textsc{Sept. 2015}--     &   Department of Physics and Astronomy, University of California, Los Angeles \\
@@ -306,7 +309,9 @@
 
 \begin{list}{\labelitemi}{\leftmargin=1.7em}
     \vspace*{1ex}
-    \item[12] HST-GO-17159, \textbf{PI Wang}, \emph{38 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=17159&mission=hst}{Escaping Lyman Continuum from the Overdensities of Extreme Emission Line Galaxies at z$\sim$2.2}
+    \item[14] HST-GO-17159, \textbf{PI Wang}, \emph{38 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=17159&mission=hst}{Escaping Lyman Continuum from the Overdensities of Extreme Emission Line Galaxies at z$\sim$2.2}
+    \item[13] HST-GO-16667, PI Bradac: The Final Frontier: HST and JWST Exploration of Galaxies Across Cosmic Epochs
+    \item[12] HST-AR-16621, PI Koekemoer: SUPERCAL: Unified Reprocessing of the Large HST Cosmology Survey Fields - New Science, Archival Legacy, and Pathfinder for JWST
     \item[11] Keck 2022A\_U016, PI Malkan, \emph{2 Full Nights}: The Most Massive Galaxy Protoclusters at Cosmic Noon---Impact on Galaxy Evolution
     \item[10] JWST-GO-01571, PI Malkan: PASSAGE--Parallel Application of Slitless Spectroscopy to Analyze Galaxy Evolution
     \item[9] JWST-GO-02136, PI Jones: The emergence of the modern Hubble sequence revealed by JWST slit-stepping
@@ -384,11 +389,11 @@
 
 13 &  \textbf{Wang, X.} et al. The Lyman Continuum Escape Fraction of Star-forming Galaxies at $z\gtrsim2.4$ from UVCANDELS. In prep.  \\
 
-12 &  \textbf{Wang, X.} et al. Early results from GLASS-JWST. IV. Spatially resolved metallicity in a low-mass $z\sim3$ galaxy with NIRISS. 2022, \textit{Astrophys. J. Letters}, in press (\href{https://arxiv.org/abs/2207.13113}{arXiv:2207.13113}) [2 citations] \\
+12 &  \textbf{Wang, X.} et al. Early results from GLASS-JWST. IV. Spatially resolved metallicity in a low-mass $z\sim3$ galaxy with NIRISS. 2022, \textit{Astrophys. J. Letters}, 938, L16 (\href{https://arxiv.org/abs/2207.13113}{arXiv:2207.13113}) [2 citations] \\
 
 11 &  Li, Z., \textbf{Wang, X.} et al. First Census of Gas-phase Metallicity Gradients of Star-forming Galaxies in OverdenseEnvironments at Cosmic Noon. 2022, \textit{Astrophys. J. Letters}, 929, L8 (\href{https://arxiv.org/abs/2204.03008}{arXiv:2204.03008}) [3 citations] \\
 
-10 &  \textbf{Wang, X.} et al. The mass-metallicity relation at cosmic noon in overdense environments: first results from the MAMMOTH-Grism HST slitless spectroscopic survey. 2022, \textit{Astrophys. J.}, 926, 70 (\href{https://arxiv.org/abs/2108.06373}{arXiv:2108.06373}) [5 citations] \\
+10 &  \textbf{Wang, X.} et al. The mass-metallicity relation at cosmic noon in overdense environments: first results from the MAMMOTH-Grism HST slitless spectroscopic survey. 2022, \textit{Astrophys. J.}, 926, 70 (\href{https://arxiv.org/abs/2108.06373}{arXiv:2108.06373}) [6 citations] \\
 
 9 &  \textbf{Wang, X.} et al. A Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless Spectroscopy. 2020, \textit{Astrophys. J.}, 900, 183 (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) [19 citations] \\
 
