--- a/xwang_cv_10pt.tex
+++ b/xwang_cv_10pt.tex
@@ -387,7 +387,9 @@
 
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 
-13 &  \textbf{Wang, X.} et al. The Lyman Continuum Escape Fraction of Star-forming Galaxies at $z\gtrsim2.4$ from UVCANDELS. In prep.  \\
+14 &  \textbf{Wang, X.} et al. A strong He II $\lambda$1640 emitter with extremely blue UV spectral slope at $z=8.16$: presence of Pop III stars? 2023, submitted to \textit{Nature}    \\
+
+13 &  \textbf{Wang, X.} et al. The Lyman Continuum Escape Fraction of Star-forming Galaxies at $z\gtrsim2.4$ from UVCANDELS. 2023, submitted to \textit{Astrophys. J.}  \\
 
 12 &  \textbf{Wang, X.} et al. Early results from GLASS-JWST. IV. Spatially resolved metallicity in a low-mass $z\sim3$ galaxy with NIRISS. 2022, \textit{Astrophys. J. Letters}, 938, L16 (\href{https://arxiv.org/abs/2207.13113}{arXiv:2207.13113}) [2 citations] \\
 
