--- a/xwang_cv_10pt.tex
+++ b/xwang_cv_10pt.tex
@@ -86,8 +86,8 @@
 \section{Personal Information}
 \vspace*{1ex}
 \begin{tabular}{rl}
-    \textsc{Current Status:}  & Assistant Professor at University of Chinese Academy of Sciences    \\
-    \textsc{Email, Phone, Web:}  & \href{mailto:xwang@ucas.ac.cn}{xwang@ucas.ac.cn}  |  +86-13121987901  |  \url{http://www.astro.ucla.edu/~xwang}\\
+    \textsc{Current Status:}  & Associate Professor at University of Chinese Academy of Sciences    \\
+    \textsc{Email, Phone, Web:}  & \href{mailto:xwang@ucas.ac.cn}{xwang@ucas.ac.cn}  |  +86-13121987901  |  \url{https://people.ucas.ac.cn/~wxn}\\
     \textsc{Mailing Address:} & 20A Datun Road, Room B447, National Astronomical Observatories  \\
                               & Chaoyang District, Beijing 100101, China    \\
 \end{tabular}
@@ -99,7 +99,7 @@
 \begin{tabular}{r|p{5.7in}}
     %--------------------------------------------------------
     \textsc{Sept. 2022}--     &   School of Astronomy and Space Science, University of Chinese Academy of Sciences  \\
-    \textsc{Present}          &   \hfill\textbf{Assistant Professor}    \\
+    \textsc{Present}          &   \hfill\textbf{Associate Professor}    \\
     \multicolumn{2}{c}{} \\[\narrow]
     %--------------------------------------------------------
     \textsc{Aug. 2019}--      &   Infrared Processing and Analysis Center, Caltech \\
@@ -170,6 +170,12 @@
 \renewcommand\arraystretch{0.3}
 \vspace*{-.5em}
 \begin{longtable}{r|p{\textwrap}}
+
+    \textsc{Jan. 2023}   &   \textbf{Invited Talk}, @ \href{https://aas.org/meetings/aas241}{AAS 241}, Seattle \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Jun. 2022}   &   \textbf{Invited Talk}, @ \href{https://aas.org/meetings/aas240}{AAS 240}, Pasadena \\
+    \multicolumn{2}{c}{} \\
 
     \textsc{Jan. 2022}   &   \textbf{Contributed Talk}, @ \href{https://aas.org/meetings/aas239}{AAS 239}, Salt Lake City\\
     \multicolumn{2}{c}{} \\
@@ -309,6 +315,7 @@
 
 \begin{list}{\labelitemi}{\leftmargin=1.7em}
     \vspace*{1ex}
+    \item[15] Keck 2023A\_U139, PI Malkan, \emph{2 Full Nights}: The Most Massive Galaxy Protoclusters at Cosmic Noon---Impact on Galaxy Evolution
     \item[14] HST-GO-17159, \textbf{PI Wang}, \emph{38 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=17159&mission=hst}{Escaping Lyman Continuum from the Overdensities of Extreme Emission Line Galaxies at z$\sim$2.2}
     \item[13] HST-GO-16667, PI Bradac: The Final Frontier: HST and JWST Exploration of Galaxies Across Cosmic Epochs
     \item[12] HST-AR-16621, PI Koekemoer: SUPERCAL: Unified Reprocessing of the Large HST Cosmology Survey Fields - New Science, Archival Legacy, and Pathfinder for JWST
@@ -331,7 +338,7 @@
 
 \begin{tabular}{p{0.5\textwidth}|l}
     \textbullet~Keck OSIRIS, 16 nights & \textbullet~Keck DEIMOS, 3 nights \\
-    \textbullet~Keck MOSFIRE, 1 night & \textbullet~Keck ESI, 1 night \\
+    \textbullet~Keck MOSFIRE, 5 night & \textbullet~Keck ESI, 1 night \\
     \textbullet~Lick Observatory Shane telescope, 1 night & \textbullet~Steward Observatory Bok telescope, 6 nights \\
     \textbullet~Palomar Observatory P200 telescope, 2 nights
 \end{tabular}
