--- a/xwang_cv_10pt.tex
+++ b/xwang_cv_10pt.tex
@@ -133,8 +133,8 @@
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Jun. 2019} & UCLA Physics and Astronomy Commencement Speaker  \\
     \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Jan. 2019} & Chinese Government Award for Outstanding Graduate Students Abroad (\$6k)   \\
-    \multicolumn{2}{c}{} \\[\narrow]
+%    \textsc{Jan. 2019} & Chinese Government Award for Outstanding Graduate Students Abroad (\$6k)   \\
+%    \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Dec. 2018} & UCLA Doctoral Student Travel Grant (\$1k)   \\
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Jul. 2018} & UCLA Richardson Travel Fund (\$1.7k)   \\
@@ -153,9 +153,9 @@
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Sept. 2013} & Broida Fellowship, UCSB (\$3k)  \\
     \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Dec. 2012} & National Scholarship for Graduate Students (CNY30k)  \\
+%    \textsc{Dec. 2012} & National Scholarship for Graduate Students (CNY30k)  \\
 %                     & {\it The highest honorific scholarship in China conferred annually on excellent graduate students.}\\
-    \multicolumn{2}{c}{} \\[\narrow]
+%    \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Aug. 2010} & 1$^{\rm st}$ Prize for Excellent B.Sc. Thesis amongst all Universities and Colleges in Jiangsu Province \\
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Oct. 2009} & Scholarship of National Astronomical Observatories, Chinese Academy of Sciences
